Added instruction to delete the container after closing the devcontainer in vscode.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,5 +16,7 @@
     }
   },
   "remoteUser": "vscode",
-  "postCreateCommand": "sudo apt-get update && sudo apt-get install -y gdb"
+  "postCreateCommand": "sudo apt-get update && sudo apt-get install -y gdb",
+  "features": {},
+  "runArgs": ["--rm"] //delete container after close vscode
 }
